# azul

azul/: Cargo.toml  app.rs  display_list.rs  lib.rs  text_layout.rs  window.rs
azul/src/: app.rs  lib.rs  window.rs
cargo/azul/: Cargo.toml
cargo/azul-core/: Cargo.toml
cargo/azul-widgets/: Cargo.toml
examples/: debug.rs
src/: text_layout.rs
src/widgets/: svg.rs
