[package]
name = "azul-widgets"
version = "0.1.0"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MIT"
description = '''
    Builtin widgets for the Azul GUI framework (buttons, checkboxes, labels, etc.)
'''
documentation = "https://docs.rs/azul-widgets"
homepage = "https://azul.rs/"
keywords = ["gui", "GUI", "user interface"]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
readme = "README.md"
exclude = ["../assets/*", "../doc/*", "../examples/*"]
autoexamples = false

[lib]
path = "../../azul-widgets/lib.rs"

[dependencies]
azul-core               = { version = "0.1.0",  path = "../azul-core" }
lyon                    = { version = "0.11.0", default-features = false, optional = true }
usvg                    = { version = "0.3.0", default-features = false, optional = true }
stb_truetype            = { version = "0.2.2", default-features = false, optional = true }

# The SVG rendering module is pretty huge since it needs lyon - if you don't use
# SVG rendering in your app, you can turn this off to increase compilation
# speed and decrease your binary size

[features]
# The SVG rendering module is pretty huge since it needs lyon - if you don't use
# SVG rendering in your app, you can turn this off to increase compilation
# speed and decrease your binary size
svg = ["lyon", "stb_truetype"]
# This is for activating **parsing** of SVG files. If you, for example, just
# want to draw shapes on the screen, you do not need to activate this feature,
# this is just for parsing the SVG from a file.
svg_parsing = ["svg", "usvg"]
